Created error handling for candidate management